--- a/resources/js/src/assets/css/style.scss
+++ b/resources/js/src/assets/css/style.scss
@@ -1,1 +1,11 @@
+@import 'primeicons/primeicons.css';
 @import "variables";
+
+
+*{
+    padding: 0;
+    margin: 0;
+    font-family: "Roboto Flex", sans-serif;
+    box-sizing: border-box;
+    outline: none;
+}
