--- a/resources/js/src/assets/css/style.scss
+++ b/resources/js/src/assets/css/style.scss
@@ -1,5 +1,6 @@
 @import 'primeicons/primeicons.css';
 @import "variables";
+@import "common";
 
 
 *{
@@ -10,25 +11,4 @@
     outline: none;
 }
 
-.common-btn{
-    background: $primaryColor;
-}
 
-.common-btn > .p-button-label{
-    font-weight: 400;
-}
-
-.password-input > .p-inputtext{
-    width: 100%;
-}
-.password-input > .p-input-icon{
-    top: 33%;
-}
-
-.router-link{
-    color: $primaryColor;
-}
-
-.common-input{
-
-}
