fix axios interceptor, add loading btn, toast, single upload

--- a/resources/js/src/assets/css/common.scss
+++ b/resources/js/src/assets/css/common.scss
@@ -25,3 +25,12 @@
 .p-inputtext {
     padding: 0 10px;
 }
+
+//Toast
+.p-toast-message{
+    padding: 10px 15px;
+}
+
+.p-toast-message-text{
+    margin-left: 10px;
+}
